[gd_scene load_steps=4 format=3 uid="uid://bhud3mxyn7h1xm"]

[ext_resource type="Script" path="res://scripts/hud.gd" id="1_hud"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0, 0.8, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2"]
bg_color = Color(0.8, 0, 0, 1)

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_hud")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="StaminaLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "STAMINA"
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 16

[node name="StaminaBar" type="ProgressBar" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 20)
layout_mode = 2
max_value = 100.0
value = 100.0
show_percentage = false
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_styles/fill = SubResource("StyleBoxFlat_1")

[node name="FearLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "FEAR"
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 16

[node name="FearBar" type="ProgressBar" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 20)
layout_mode = 2
max_value = 100.0
show_percentage = false
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_styles/fill = SubResource("StyleBoxFlat_2")

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -50.0
offset_right = 200.0
offset_bottom = 50.0

[node name="MessageLabel" type="Label" parent="CenterContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1
vertical_alignment = 1
